# data_eng_1

./: .gitignore  Dockerfile  Makefile  playground.ipynb  pyproject.toml  requirements.txt
solution/: README.md  main.py
